--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -1105,7 +1105,7 @@ field-name-field-ding-page-body ul
 }
 .field_kilde
 {
-    float: left; 
-    width: 100%;
+    font-size: 11px;
+    width:100%;
     margin-bottom: 15px;
-}
+} 
